--- a/example/test.html
+++ b/example/test.html
@@ -7,5 +7,11 @@
 <body>
     <p>this is a fast-cache test!</p>
     <script src="../release/bundle.js"></script>
+	<script>
+		var FC = window.FastCache;
+		var cache = new FC();
+		cache.set('a',100);
+		alert(cache.get('a'));
+	</script>
 </body>
 </html>
